--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Components HH EX 1</title>
   </head>
   <body>
@@ -15,23 +15,25 @@
 
     <script type="text/babel">
       const rootElement = document.querySelector("#root");
-      
+
       // Start coding here
-      
+      function Link() {
+        return <a href="https://www.google.com">google.com</a>;
+      }
 
       const app = (
         <div className="container">
           <header>
             <h1>Website Header</h1>
-            <a href="https://www.techupth.com">techupth.com</a>
+            <Link />
           </header>
           <main>
             <h1>Main Section</h1>
-            <a href="https://www.techupth.com">techupth.com</a>
+            <Link />
           </main>
           <footer>
             <h1>Website Footer</h1>
-            <a href="https://www.techupth.com">techupth.com</a>
+            <Link />
           </footer>
         </div>
       );
