--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Components HH EX 2</title>
   </head>
   <body>
@@ -15,23 +15,45 @@
 
     <script type="text/babel">
       const rootElement = document.querySelector("#root");
-      
+
       // Start coding here
-    
-      const app = (
-        <div className="container">
+      function Header() {
+        return (
           <header>
             <h1>Website Header</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ratione ullam impedit consectetur porro sed fuga ipsa sequi, accusamus quas debitis alias, et repellat architecto magnam optio dolores commodi ipsam.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              ratione ullam impedit consectetur porro sed fuga ipsa sequi,
+              accusamus quas debitis alias, et repellat architecto magnam optio
+              dolores commodi ipsam.
+            </p>
           </header>
+        );
+      }
+
+      function Main() {
+        return (
           <main>
             <h1>Main Section</h1>
             <button>Click me</button>
           </main>
+        );
+      }
+
+      function Footer() {
+        return (
           <footer>
             <h1>Website Footer</h1>
             <a href="https://www.techupth.com">techupth.com</a>
           </footer>
+        );
+      }
+
+      const app = (
+        <div className="container">
+          <Header />
+          <Main />
+          <Footer />
         </div>
       );
 
